More work on registries, added Ref, gradient registry