@@ -1,36 +1,23 @@
-package dev.latvian.mods.klib.color;
+package dev.latvian.mods.klib.gradient;
 
-import com.mojang.datafixers.util.Either;
-import com.mojang.serialization.Codec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
-import dev.latvian.mods.klib.interpolation.LinearInterpolation;
+import dev.latvian.mods.klib.color.Color;
+import dev.latvian.mods.klib.color.PositionedColor;
 import dev.latvian.mods.klib.math.KMath;
+import dev.latvian.mods.klib.registry.CustomRegistryType;
+import dev.latvian.mods.klib.util.ID;
 import io.netty.buffer.ByteBuf;
-import net.minecraft.network.codec.ByteBufCodecs;
-import net.minecraft.network.codec.StreamCodec;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.function.Function;
 
 public final class CompoundGradient implements Gradient {
-	public static final Codec<CompoundGradient> DIRECT_CODEC = RecordCodecBuilder.create(instance -> instance.group(
-		PositionedColor.CODEC.listOf().fieldOf("colors").forGetter(c -> c.sortedList)
-	).apply(instance, CompoundGradient::new));
-
-	public static CompoundGradient ofColors(List<Color> colors) {
-		var list = new ArrayList<PositionedColor>(colors.size());
-
-		for (int i = 0; i < colors.size(); i++) {
-			list.add(new PositionedColor(i / (float) (colors.size() - 1), colors.get(i), LinearInterpolation.INSTANCE));
-		}
-
-		return new CompoundGradient(list);
-	}
-
-	public static final Codec<CompoundGradient> CODEC = Codec.either(DIRECT_CODEC, Color.CODEC.listOf()).xmap(e -> e.map(Function.identity(), CompoundGradient::ofColors), g -> g.isSimple() ? Either.right(g.getRawColors()) : Either.left(g));
-	public static final StreamCodec<ByteBuf, CompoundGradient> STREAM_CODEC = PositionedColor.STREAM_CODEC.apply(ByteBufCodecs.list()).map(CompoundGradient::new, c -> c.sortedList);
+	public static final CustomRegistryType<ByteBuf, Gradient> TYPE = Gradient.REGISTRY.dynamic(ID.klib("compound"),
+		RecordCodecBuilder.mapCodec(instance -> instance.group(
+			PositionedColor.LIST_CODEC.fieldOf("colors").forGetter(CompoundGradient::getPositionedColors)
+		).apply(instance, CompoundGradient::new)),
+		PositionedColor.LIST_STREAM_CODEC.map(CompoundGradient::new, CompoundGradient::getPositionedColors)
+	);
 
 	private final PositionedColor[] sorted;
 	private final List<PositionedColor> sortedList;
@@ -40,7 +27,7 @@ public final class CompoundGradient implements Gradient {
 	private CompoundGradient(PositionedColor[] sorted) {
 		this.sorted = sorted;
 		Arrays.sort(this.sorted);
-		this.sortedList = Arrays.asList(this.sorted);
+		this.sortedList = List.of(this.sorted);
 
 		float leftMostPosition = 1F;
 		float rightMostPosition = 0F;
@@ -92,41 +79,19 @@ public final class CompoundGradient implements Gradient {
 	@Override
 	public Gradient optimize() {
 		if (sorted.length == 0) {
-			return Color.TRANSPARENT;
-		} else if (sorted.length == 2 && sorted[0].interpolation().isLinear()) {
-			return new LinearPairGradient(sorted[0].color(), sorted[sorted.length - 1].color()).optimize();
+			return Gradient.EMPTY.value();
+		} else if (sorted.length == 2 && sorted[0].interpolation().value().isLinear()) {
+			return new LinearGradient(sorted[0].color(), sorted[sorted.length - 1].color()).optimize();
 		} else if (sorted.length == 1) {
-			return sorted[0].color().optimize();
+			return sorted[0].color().toGradient();
 		} else {
 			return this;
 		}
 	}
 
-	public boolean isSimple() {
-		for (int i = 0; i < sorted.length; i++) {
-			var c = sorted[i];
-
-			if (!c.interpolation().isLinear() || Math.abs(c.position() - (i / (float) (sorted.length - 1))) > 0.001F) {
-				return false;
-			}
-		}
-
-		return true;
-	}
-
 	@Override
 	public List<PositionedColor> getPositionedColors() {
-		return List.copyOf(sortedList);
-	}
-
-	public List<Color> getRawColors() {
-		var list = new ArrayList<Color>(sorted.length);
-
-		for (var c : sorted) {
-			list.add(c.color());
-		}
-
-		return list;
+		return sortedList;
 	}
 
 	@Override
